--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" routerLink="/home">Home</a>
+    <a class="navbar-brand" routerLink="/home" (click)="onHome()">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,6 +21,10 @@
 
 <div class="container" style="margin-top: 20px;">
     <div class="row">
-        <h1>Welcome,</h1>
+hi:: {{ data}} aa
+
+        <h1>Welcome, {{this.localStorage.getItem('name')}}</h1>
+       
     </div>
 </div>
+
